修复部分跳转错误

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 										<h1>你好，我是瑞高，</h1>
 										<h1>一个有趣的人。</h1>
 										<p>
-											<a class="btn btn-primary btn-demo" href="#">About me</a>
-											<a class="btn btn-primary btn-learn">Contact me</a>
+											<a class="btn btn-primary btn-demo" href="web/about.html">About me</a>
+											<a class="btn btn-primary btn-learn" href="web/contact.html">Contact me</a>
 										</p>
 									</div>
 								</div>
@@ -103,8 +103,8 @@
 										<h1>你好，我是瑞高，</h1>
 										<h1>一个有趣的人。</h1>
 										<p>
-											<a class="btn btn-primary btn-demo" href="#">About me</a>
-											<a class="btn btn-primary btn-learn">Contact me</a>
+											<a class="btn btn-primary btn-demo" href="web/about.html">About me</a>
+											<a class="btn btn-primary btn-learn" href="web/contact.html">Contact me</a>
 										</p>
 									</div>
 								</div>
@@ -120,8 +120,8 @@
 										<h1>你好，我是瑞高，</h1>
 										<h1>一个有趣的人。</h1>
 										<p>
-											<a class="btn btn-primary btn-demo" href="#">About me</a>
-											<a class="btn btn-primary btn-learn">Contact me</a>
+											<a class="btn btn-primary btn-demo" href="web/about.html">About me</a>
+											<a class="btn btn-primary btn-learn" href="web/contact.html">Contact me</a>
 										</p>
 									</div>
 								</div>
@@ -137,8 +137,8 @@
 										<h1>你好，我是瑞高，</h1>
 										<h1>一个有趣的人。</h1>
 										<p>
-											<a class="btn btn-primary btn-demo" href="#">About me</a>
-											<a class="btn btn-primary btn-learn">Contact me</a>
+											<a class="btn btn-primary btn-demo" href="web/about.html">About me</a>
+											<a class="btn btn-primary btn-learn" href="web/contact.html">Contact me</a>
 										</p>
 									</div>
 								</div>
@@ -156,7 +156,7 @@
 							<i class="icon-diamond"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">创作</a></h3>
+							<h3>创作</h3>
 							<p>经历生活，感悟生活。在平凡中发现不凡，用文字记录美好。</p>
 						</div>
 					</div>
@@ -167,7 +167,7 @@
 							<i class="icon-lab2"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">摄影</a></h3>
+							<h3>摄影</h3>
 							<p>捕捉每一个美的瞬间，做一餐视觉的盛宴。</p>
 						</div>
 					</div>
@@ -178,7 +178,7 @@
 							<i class="icon-settings"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">编程</a></h3>
+							<h3>编程</h3>
 							<p>用敲击的每一行代码，去改变这个繁杂的世界。</p>
 						</div>
 					</div>
@@ -190,7 +190,7 @@
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<h1>欢迎来到我的世界</h1>
-					<p>不拘束于眼前，持续攀登。因为<br>眼界之外，有更大的世界。</p>
+					<p>不拘于眼前，持续攀登。因为<br>眼界之外，有更大的世界。</p>
 					<p></p>
 				</div>
 			</div>
@@ -256,8 +256,8 @@
 				<div class="desc-t">
 					<div class="desc-tc">
 						<span class="featured-head">创作空间</span>
-						<h3><a href="#">那些美的事物，<br>只有读过，才不会心生遗憾。</a></h3>
-						<span><a href="#" class="read-button">查看更多</a></span>
+						<h3>那些美的事物，<br>只有读过，才不会心生遗憾。</h3>
+						<span><a href="web/article.html" class="read-button">查看更多</a></span>
 					</div>
 				</div>
 			</div>
