--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="web/article.html">Article</a></li>
-							<li><a href="web/photos.html">Photos</a></li>
-							<li><a href="web/blog.html">Blog</a></li>
-							<li><a href="web/about.html">About</a></li>
-							<li><a href="web/contact.html">Contact</a></li>
+							<li class="active"><a href="index.html">主页</a></li>
+							<li><a href="web/article.html">创作</a></li>
+							<li><a href="web/photos.html">摄影</a></li>
+							<li><a href="web/blog.html">博客</a></li>
+							<li><a href="web/about.html">关于我</a></li>
+							<li><a href="web/contact.html">联系我</a></li>
 						</ul>
 					</div>
 				</div>
@@ -86,8 +86,8 @@
 										<h1>你好，我是瑞高，</h1>
 										<h1>一个有趣的人。</h1>
 										<p>
-											<a class="btn btn-primary btn-demo" href="web/about.html">About me</a>
-											<a class="btn btn-primary btn-learn" href="web/contact.html">Contact me</a>
+											<a class="btn btn-primary btn-demo" href="web/about.html">关于我</a>
+											<a class="btn btn-primary btn-learn" href="web/contact.html">联系我</a>
 										</p>
 									</div>
 								</div>
@@ -103,8 +103,8 @@
 										<h1>你好，我是瑞高，</h1>
 										<h1>一个有趣的人。</h1>
 										<p>
-											<a class="btn btn-primary btn-demo" href="web/about.html">About me</a>
-											<a class="btn btn-primary btn-learn" href="web/contact.html">Contact me</a>
+											<a class="btn btn-primary btn-demo" href="web/about.html">关于我</a>
+											<a class="btn btn-primary btn-learn" href="web/contact.html">联系我</a>
 										</p>
 									</div>
 								</div>
@@ -120,8 +120,8 @@
 										<h1>你好，我是瑞高，</h1>
 										<h1>一个有趣的人。</h1>
 										<p>
-											<a class="btn btn-primary btn-demo" href="web/about.html">About me</a>
-											<a class="btn btn-primary btn-learn" href="web/contact.html">Contact me</a>
+											<a class="btn btn-primary btn-demo" href="web/about.html">关于我</a>
+											<a class="btn btn-primary btn-learn" href="web/contact.html">联系我</a>
 										</p>
 									</div>
 								</div>
@@ -137,8 +137,8 @@
 										<h1>你好，我是瑞高，</h1>
 										<h1>一个有趣的人。</h1>
 										<p>
-											<a class="btn btn-primary btn-demo" href="web/about.html">About me</a>
-											<a class="btn btn-primary btn-learn" href="web/contact.html">Contact me</a>
+											<a class="btn btn-primary btn-demo" href="web/about.html">关于我</a>
+											<a class="btn btn-primary btn-learn" href="web/contact.html">联系我</a>
 										</p>
 									</div>
 								</div>
