--- a/web/article.html
+++ b/web/article.html
@@ -28,16 +28,12 @@
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
-
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
-
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
-
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
-
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -60,12 +56,12 @@
 						</div>
 						<div class="col-xs-10 text-right menu-1">
 							<ul>
-								<li><a href="../index.html">Home</a></li>
-								<li class="active"><a href="article.html">Article</a></li>
-								<li><a href="photos.html">Photos</a></li>
-								<li><a href="blog.html">Blog</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="../index.html">主页</a></li>
+								<li class="active"><a href="article.html">创作</a></li>
+								<li><a href="photos.html">摄影</a></li>
+								<li><a href="blog.html">博客</a></li>
+								<li><a href="about.html">关于我</a></li>
+								<li><a href="contact.html">联系我</a></li>
 							</ul>
 						</div>
 					</div>
@@ -126,6 +122,11 @@
 
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
+	<!-- cactus-->
+	<script src="js/article.js"></script>
+	<script>
+		initArticle()
+	</script>
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
@@ -139,6 +140,9 @@
 	<script src="js/magnific-popup-options.js"></script>
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
+	<!-- content init-->
+	<script src="js/cactus.js"></script>
+	<script src="js/article.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
