--- a/web/photos.html
+++ b/web/photos.html
@@ -60,12 +60,12 @@
 						</div>
 						<div class="col-xs-10 text-right menu-1">
 							<ul>
-								<li><a href="../index.html">Home</a></li>
-								<li><a href="article.html">Article</a></li>
-								<li class="active"><a href="photos.html">Photos</a></li>
-								<li><a href="blog.html">Blog</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="../index.html">主页</a></li>
+								<li><a href="article.html">创作</a></li>
+								<li class="active"><a href="photos.html">摄影</a></li>
+								<li><a href="blog.html">博客</a></li>
+								<li><a href="about.html">关于我</a></li>
+								<li><a href="contact.html">联系我</a></li>
 							</ul>
 						</div>
 					</div>
