fix blog page unsuitable

--- a/web/blog.html
+++ b/web/blog.html
@@ -34,6 +34,8 @@
 	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
+	<!-- cactus stype  -->
+	<link rel="stylesheet" href="css/cactus.css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
