--- a/web/about.html
+++ b/web/about.html
@@ -96,19 +96,18 @@
 		<div id="fh5co-about">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section">
-					<h3>Our History</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 text-center animate-box">
-					<p><img src="images/cover_bg_3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+					<p><img src="images/superman.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center animate-box">
 					<div class="about-desc">
-						<h3>Hi! I'm Ruigao</h3>
-						<p>wo xi huan chang tiao rap da lan qiu!</p>
+						<h3>Hi! I'm Ruigao,</h3>
+						<p>An intersting man.</p>
 					</div>
 				</div>
 			</div>
