--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
 <!-- Theme style  -->
 <link rel="stylesheet" href="web/css/style.css">
-
+<!-- live2d	-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
+<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 <!-- Modernizr JS -->
 <script src="web/js/modernizr-2.6.2.min.js"></script>
 <!-- FOR IE9 below -->
@@ -298,8 +300,7 @@
 				</div>
 			</div>
 		</div>
-	</div><!-- END container-wrap -->
-
+	</div>
 	<div class="container-wrap">
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="row copyright">
@@ -342,6 +343,5 @@
 <script src="web/js/jquery.countTo.js"></script>
 <!-- Main -->
 <script src="web/js/main.js"></script>
-
 </body>
 </html>
