add live2d at all

--- a/web/blog.html
+++ b/web/blog.html
@@ -36,6 +36,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<!-- cactus stype  -->
 	<link rel="stylesheet" href="css/cactus.css">
+	<!-- live2d	-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
+	<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
