--- a/web/contact.html
+++ b/web/contact.html
@@ -101,8 +101,8 @@
 				<div class="col-md-3 col-md-push-1 animate-box">
 					<h3>My Address</h3>
 					<ul class="contact-info">
-						<li><i class="icon-location4"></i>北京市-海淀区</li>
-						<li><i class="icon-mail3"></i><a href="#">369458889@qq.com</a></li>
+						<li><i class="icon-location4"></i>中国-北京市</li>
+						<li><i class="icon-mail3"></i><a href="#">cactusliruigao@gmail.com</a></li>
 						<li><i class="icon-globe2"></i><a href="#">www.liruigao.top</a></li>
 					</ul>
 				</div>
